# PacerBot

./: .gitignore  README.md
.cache/clangd/index/: main.cpp.A26C192B83463AB4.idx  motors.h.4609AB3456C7AF55.idx  motors_mock.cpp.50C22D94E0B49ED3.idx  state_machine.cpp.4F53D59A29D9D95F.idx  state_machine.h.A7C1446CB5693B46.idx
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: pacerbot-stm.1758042908099.pdom  pacerbot-stm.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
app/: CMakeLists.txt
app/include/: state_machine.h
app/src/: main.cpp  state_machine.cpp
firmware/: .cproject  .mxproject  .project  CMakeLists.txt  pacerbot_f411re Debug.launch  pacerbot_f411re.ioc
firmware/.metadata/: .log4j2.xml  version.ini
firmware/Core/Src/: main.c  stm32f4xx_hal_msp.c  uart_redirect.c
firmware/cmake/stm32cubemx/: CMakeLists.txt
firmware/pacerbot-f411re/: .cproject  .mxproject  .project  pacerbot-f411re Debug.launch  pacerbot-f411re.ioc
firmware/pacerbot-f411re/Debug/: makefile  objects.list  objects.mk  pacerbot-f411re.elf  pacerbot-f411re.list  pacerbot-f411re.map  sources.mk
hal/: CMakeLists.txt
hal/include/: encoders.h  motors.h
linux/: CMakeLists.txt  README.md
linux/app/: CMakeLists.txt
linux/app/include/: state_machine.h  timing.h  uart_comms.h
linux/app/src/: main.cpp  state_machine.cpp  timing.cpp
linux/comm/bluetooth/: README.md
linux/comm/uart/: CMakeLists.txt
linux/comm/uart/include/comm/uart/: EventUART.h  config.h  manager.h  packet_info.h  recv.h  send.h
linux/comm/uart/src/: EventUART.cpp  manager.cpp  packet_info.cpp  recv.cpp  send.cpp
linux/hal/: CMakeLists.txt
linux/hal/include/: motors.h  serial_uart.h
linux/hal/include/exception/: serial_exception.h
linux/hal/include/hal/: SerialUART.h
linux/hal/include/hal/exception/: SerialException.h
linux/hal/src/: SerialUART.cpp  serial_uart.cpp
linux/hal/src/mock/: encoders_mock.cpp  motors_mock.cpp
pacerbot-stm/: .cproject  .mxproject  .project  pacerbot-stm.ioc
scripts/: plot_simulation.py  simulation_output.txt
stm/: CMakeLists.txt
stm/Firmware/hal/: CMakeLists.txt
stm32/: .gitignore  .mxproject  CMakeLists.txt  pacerbot_f411re.ioc
stm32/.metadata/: .log4j2.xml  version.ini
stm32/Firmware/: CMakeLists.txt
stm32/Firmware/app/: CMakeLists.txt
stm32/Firmware/app/include/app/: app_main.h
stm32/Firmware/app/src/: app_main.cpp
stm32/Firmware/comm/uart/: CMakeLists.txt
stm32/Firmware/comm/uart/include/comm/uart/: callbacks.h  manager.h  packet_info.h  recv.h  send.h
stm32/Firmware/comm/uart/src/: callbacks.cpp  manager.cpp  packet_info.cpp  recv.cpp  send.cpp
stm32/pacerbot-f411re/: .cproject  pacerbot-f411re.ioc
(+120 files in other folders)
